FIX | Height issue on Safari

--- a/pages/style.module.scss
+++ b/pages/style.module.scss
@@ -3,14 +3,16 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  height: var(--app-height);
   min-height: 600px;
-  max-height: 100vh;
 
   .rightSide {
     flex: 1;
     position: relative;
     width: 100%;
-    max-height: 100vh;
+    min-width: 100vw;
+    height: 100vh;
+    height: var(--app-height);
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
@@ -22,10 +24,4 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
-  .documentContainer {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
 }
